syntax = "proto3";
package proto; 
option go_package = "./";

service KeyValue {
  rpc Create (CreateRequest) returns (CreateReply) {}
  rpc Delete (DeleteRequest) returns (DeleteReply) {}
  rpc Get (GetRequest) returns (GetReply) {}
  rpc Set (SetRequest) returns (SetReply) {}
}

message CreateRequest {
    string key = 1;
    string value = 2;
}

message CreateReply {
}

message DeleteRequest {
    string key = 1;
}

message DeleteReply {
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetReply {
}

message GetRequest {
  string key = 1;
}

message GetReply {
  string value = 1;
}